# imagent

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-improvement.yml  config.yml  leaderboard-ui.yml
.github/scripts/: round_manager.py
.github/workflows/: benchmark-api-main.yml  benchmark-api-pr.yml  benchmark-pr.yml  benchmark-verdict.yml  benchmark.yml  ci.yml  current-round-winner.yml  pr-rules.yml
agent/: agent.py  agent.yaml  common.py  constants.py  generation.py  grounding.py  image_backend_api.py  rendering.py  tooling.py  verifier.py
agents/image_agent/: agent.yaml
agents/qwen_baseline/: agent.yaml
configs/: api-gate-openrouter.yaml  api-gate.yaml  image-agent-smoke.yaml  local-smoke.yaml  pr-gate.yaml  qwen-smoke.yaml
docs/: api_benchmark.md  ci.md
imagent-bench/configs/: official.json
imagent-bench/tests/: test_agent_loader.py  test_models.py  test_runner.py  test_scoring.py
imagent-ui/: README.md  next.config.mjs
imagent-ui/app/: page.tsx  styles.css
imagent-ui/deploy/: Caddyfile
imagent-ui/lib/: playground.ts  security.ts
imagent-ui/public/: presentation.html
imagent-ui/scripts/: run_imagent_agent.py
imagent_bench/: compare.py  config.py  promote_baseline.py  registry.py  runner.py
imagent_runtime/: cli.py
tests/: test_compare.py  test_config.py  test_image_agent.py  test_image_judge.py  test_openrouter_baseline.py  test_openrouter_image_judge.py  test_promote_baseline.py  test_qwen_baseline.py  test_runner.py
(+44 files in other folders)
