[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagent"
version = "0.1.0"
description = "Image-agent benchmark and baseline implementations."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.22.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["imagent_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
